[package]
name = "rustafl"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
rand = "0.9.2"
reqwest = { version = "0.12.28", features = ["json"] }
serde = "1.0.228"
serde_json = "1.0.148"
tokio = { version = "1.48.0", features = ["full"] }

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
panic = "abort"
strip = true

# RUSTFLAGS="-C target-cpu=native -C lto=fat" cargo build --release --target x86_64-unknown-linux-gnu
